Home products fix mobile

--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -1,10 +1,10 @@
 <div
-  class="container-fluid p-0 height-vp-full spacing-0"
+  class="container-fluid p-0 height-content-full spacing-0"
 >
-  <div class="row m-0 height-vp-full">
+  <div class="row m-0 height-content-full">
     <div class="col-sm-7 p-0 image-col">
       <img
-        class="width-100 company-banner-image height-vp-full"
+        class="width-100 company-banner-image height-content-full"
         src="assets/images/team/Mindspace_WifiPlug_6006.jpg"
       />
     </div>
