--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -4,16 +4,16 @@
     class="container-fluid p-0 border-top-secondary border-bottom-secondary"
   >
     <div class="row m-0 row-large products-row">
-      <div class="row m-0 width-100 height-vp-full-with-header">
+      <div class="row m-0 width-100 second-row">
         <div
           id="wifiplug-col"
           class="col-lg product-col z-index-1 product-background with-border"
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div first-content-div"
+              class="height-100 d-flex flex-column padding-top-9 padding-bottom-10 content-div first-content-div"
             >
-              <div>
+              <div class="margin-bottom-2">
                 <h3 class="text-color-primary">WIFIPLUG</h3>
                 <h5 class="text-color-secondary">
                   Simplify, schedule and automate daily life.
@@ -28,7 +28,7 @@
                   from your phone with the WIFIPLUG app and every major voice
                   assistant.
                 </p>
-                <div class="text-center margin-top-5 product-button button-2">
+                <div class="text-center margin-top-2 product-button button-2">
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
@@ -47,9 +47,9 @@
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
+              class="height-100 d-flex flex-column padding-top-9 padding-bottom-10 content-div"
             >
-              <div>
+              <div class="margin-bottom-2">
                 <h3 class="text-color-primary">SERVICEPLUG</h3>
                 <h5 class="text-color-secondary">
                   Manage your appliances, and extend their lifespan.
@@ -65,7 +65,7 @@
                   predictive maintenance can add an extra two years to your
                   machine's lifespan!
                 </p>
-                <div class="text-center margin-top-5 product-button button-2">
+                <div class="text-center margin-top-2 product-button button-2">
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
@@ -84,9 +84,9 @@
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
+              class="height-100 d-flex flex-column padding-top-9 padding-bottom-10 content-div"
             >
-              <div>
+              <div class="margin-bottom-2">
                 <h3 class="text-color-primary">
                   White Labelling
                 </h3>
@@ -104,7 +104,7 @@
                   with the dedicated app, which you can also personalise with
                   your logo.
                 </p>
-                <div class="text-center margin-top-5 product-button button-2">
+                <div class="text-center margin-top-2 product-button button-2">
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
@@ -123,9 +123,9 @@
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div last-content-div"
+              class="height-100 d-flex flex-column padding-top-9 padding-bottom-10 content-div last-content-div"
             >
-              <div>
+              <div class="margin-bottom-2">
                 <h3 class="text-color-primary">Consulting</h3>
                 <h5 class="text-color-secondary">
                   Brilliant solutions. <br />Profitable results.
@@ -139,7 +139,7 @@
                   We have worked with a lot of companies, to provide them the
                   best solution adapted to their problems.
                 </p>
-                <div class="text-center margin-top-5 product-button button-2">
+                <div class="text-center margin-top-2 product-button button-2">
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
