--- a/src/app/components/products/consulting/work-with/work-with.component.html
+++ b/src/app/components/products/consulting/work-with/work-with.component.html
@@ -1,4 +1,4 @@
-<div class="background-color-primary min-height-vp-full">
+<div class="background-color-primary min-height-content-full">
   <div class="container padding-top-6 padding-bottom-6">
     <div class="row justify-content-center margin-bottom-1">
       <h3 class="text-color-light text-center font-weight-bold m-0">
