--- a/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0 spacing-0">
-  <div class="row m-0 banner-row height-vp-full">
+  <div class="row m-0 banner-row height-content-full">
     <div class="col-lg-8 image-col padding-left-2 padding-right-2 z-index-1">
       <div class="row m-0 height-100 align-items-center">
         <div id="consumers-banner-img-1" class="col-4">
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div
-      class="col-lg-4 height-vp-full padding-right-4 d-flex flex-column justify-content-center consumers-banner-right text-center background-color-primary"
+      class="col-lg-4 height-content-full padding-right-4 d-flex flex-column justify-content-center consumers-banner-right text-center background-color-primary"
     >
       <div>
         <div class="text-color-light">
