--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,9 @@ a:focus {
 .border-bottom-secondary {
   border-bottom: 0.15rem solid var(--bg-secondary);
 }
+.border-top-light {
+  border-top: 0.15rem solid var(--bg-light);
+}
 .border-bottom-light {
   border-bottom: 0.15rem solid var(--bg-light);
 }
