--- a/src/app/components/not-found-error/not-found-error.component.html
+++ b/src/app/components/not-found-error/not-found-error.component.html
@@ -1,4 +1,4 @@
-<article class="height-vp-full">
+<article class="height-content-full">
   <div
     class="container-fluid d-flex flex-column height-100 justify-content-center align-items-center"
   >
