--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -1,10 +1,10 @@
 <div
-  class="container-fluid p-0 height-vp-full spacing-0 background-color-primary"
+  class="container-fluid p-0 height-content-full spacing-0 background-color-primary"
 >
-  <div class="row m-0 height-vp-full">
+  <div class="row m-0 height-content-full">
     <div class="col-sm-8 p-0 image-col">
       <img
-        class="width-100 manufacturers-banner-image height-vp-full"
+        class="width-100 manufacturers-banner-image height-content-full"
         src="assets/images/serviceplug/Dashboard.jpg"
       />
     </div>
