--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
@@ -1,4 +1,4 @@
-<div class="img-fluid banner-div shadow-sm height-vp-full">
+<div class="img-fluid banner-div shadow-sm height-content-full">
   <div
     class="height-100 padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
