--- a/src/app/components/products/whitelabel/whitelabel.component.html
+++ b/src/app/components/products/whitelabel/whitelabel.component.html
@@ -1,5 +1,5 @@
 <div
-  class="container-fluid padding-top-6 padding-bottom-6 padding-left-4 padding-right-4 background-color-primary min-height-vp-full"
+  class="container-fluid padding-top-6 padding-bottom-6 padding-left-4 padding-right-4 background-color-primary min-height-content-full"
 >
   <div class="row justify-content-center margin-bottom-3">
     <h3 class="text-color-light text-center font-weight-bold m-0">
