Removed location on company + mobile fixes

--- a/src/app/components/products/serviceplug/consumers/consumers.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers.component.html
@@ -2,6 +2,7 @@
 
 <main>
   <app-consumers-info></app-consumers-info>
+  <app-consumers-worked-with></app-consumers-worked-with>
 </main>
 
 <app-footer></app-footer>
