--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -1,7 +1,7 @@
 <div
-  class="container-fluid p-0 height-content-full spacing-0"
+  class="container-fluid p-0 min-height-content-full spacing-0"
 >
-  <div class="row m-0 height-content-full">
+  <div class="row m-0 min-height-content-full">
     <div class="col-sm-7 p-0 image-col">
       <img
         class="width-100 company-banner-image height-content-full"
@@ -9,7 +9,7 @@
       />
     </div>
     <div
-      class="col-sm-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
+      class="col-sm-5 padding-right-5 min-height-content-full d-flex flex-column company-banner-right text-center background-color-primary"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
