--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -1,7 +1,7 @@
 <div
-  class="container-fluid p-0 height-content-full spacing-0 background-color-primary"
+  class="container-fluid p-0 min-height-content-full spacing-0 background-color-primary"
 >
-  <div class="row m-0 height-content-full">
+  <div class="row m-0 min-height-content-full">
     <div class="col-sm-8 p-0 image-col">
       <img
         class="width-100 manufacturers-banner-image height-content-full"
@@ -9,7 +9,7 @@
       />
     </div>
     <div
-      class="col-sm-4 padding-right-5 height-100 d-flex flex-column manufacturers-banner-right text-center"
+      class="col-sm-4 padding-right-5 min-height-content-full d-flex flex-column manufacturers-banner-right text-center"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
