--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid footer-container padding-3 padding-bottom-2">
     <div class="row m-0">
       <div
-        class="col-lg-3 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
+        class="col-lg-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
       >
         <img
           class="myma-logo"
@@ -14,27 +14,39 @@
           like never before.
         </a>
       </div>
-      <div class="col-lg-9 footer-col pr-0 row m-0 second-col">
-        <div
-          class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
-        >
-          <h5 class="font-weight-bold text-color-primary">About Us</h5>
-          <a routerLink="/company">What is myma?</a>
-          <a href="/company#team-anchor">Meet the team</a>
-          <a href="/company#vacancies-anchor">We're hiring</a>
-          <a href="/assets/pdf/invest.pdf">Invest in myma</a>
-          <a routerLink="/contact">Get in touch</a>
+      <div
+        class="col-lg-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1 border-left border-right"
+      >
+        <h5 class="font-weight-bold text-color-primary">About Us</h5>
+        <div class="d-flex">
+          <div class="d-flex flex-column flex-grow-1">
+            <a routerLink="/company">What is myma?</a>
+            <a href="/company#team-anchor">Meet the team</a>
+            <a href="/company#vacancies-anchor">We're hiring</a>
+          </div>
+          <div class="d-flex flex-column flex-grow-1">
+            <a href="/assets/pdf/invest.pdf">Invest in myma</a>
+            <a routerLink="/contact">Get in touch</a>
+          </div>
         </div>
-        <div
-          class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
-        >
-          <h5 class="font-weight-bold text-color-primary">Products</h5>
-          <a href="https://wifiplug.co.uk/">WIFIPLUG</a>
-          <a routerLink="/serviceplug">SERVICEPLUG</a>
-          <a routerLink="/whitelabel">White labelling</a>
-          <a routerLink="/consulting">Consulting</a>
-          <a href="https://developer.wifiplug.io/">Developer documentation</a>
+      </div>
+      <div
+        class="col-lg-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
+      >
+        <h5 class="font-weight-bold text-color-primary">Products</h5>
+        <div class="d-flex">
+          <div class="d-flex flex-column flex-grow-1">
+            <a href="https://wifiplug.co.uk/">WIFIPLUG website</a>
+            <a routerLink="/serviceplug">SERVICEPLUG</a>
+            <a routerLink="/whitelabel">White labelling</a>
+          </div>
+          <div class="d-flex flex-column">
+            <a routerLink="/consulting">Consulting</a>
+            <a href="https://developer.wifiplug.io/">Developer documentation</a>
+          </div>
         </div>
+      </div>
+      <!--
         <div
           class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
         >
@@ -61,7 +73,7 @@
             </form>
           </div>
         </div>
-      </div>
+        -->
     </div>
   </div>
 </footer>
