Fixed footer links flex columns on mobile

--- a/src/app/components/products/serviceplug/consumers/consumers-worked-with/consumers-worked-with.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-worked-with/consumers-worked-with.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="row justify-content-center margin-top-1">
-      <h4 class="m-0 text-color-light">
+      <h4 class="m-0 text-color-light text-center">
         So we provide you with the best possible support.
       </h4>
     </div>
