--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -18,7 +18,7 @@
         class="col-lg-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1 border-left border-right"
       >
         <h5 class="font-weight-bold text-color-primary">About Us</h5>
-        <div class="d-flex">
+        <div class="d-flex flex-col">
           <div class="d-flex flex-column flex-grow-1">
             <a routerLink="/company">What is myma?</a>
             <a href="/company#team-anchor">Meet the team</a>
@@ -34,13 +34,13 @@
         class="col-lg-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
       >
         <h5 class="font-weight-bold text-color-primary">Products</h5>
-        <div class="d-flex">
+        <div class="d-flex flex-col">
           <div class="d-flex flex-column flex-grow-1">
             <a href="https://wifiplug.co.uk/">WIFIPLUG website</a>
             <a routerLink="/serviceplug">SERVICEPLUG</a>
             <a routerLink="/whitelabel">White labelling</a>
           </div>
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column flex-grow-1">
             <a routerLink="/consulting">Consulting</a>
             <a href="https://developer.wifiplug.io/">Developer documentation</a>
           </div>
