Fixed buttons safari + attempt fix dropdown arrow

--- a/src/app/components/company/vacancies/vacancies.component.html
+++ b/src/app/components/company/vacancies/vacancies.component.html
@@ -62,7 +62,11 @@
     </div>
   </div>
   <div class="row mx-0 justify-content-center margin-top-2">
-    <a type="button" class="btn btn-secondary font-weight-bold" href="mailto:jobs@wifiplug.co.uk?subject=Re%3A%20Current%20Vacancies%20(myma.io)">
+    <a
+      type="link"
+      class="btn btn-secondary font-weight-bold"
+      href="mailto:jobs@wifiplug.co.uk?subject=Re%3A%20Current%20Vacancies%20(myma.io)"
+    >
       Apply for a position by email
     </a>
   </div>
