--- a/src/app/components/not-found-error/not-found-error.component.html
+++ b/src/app/components/not-found-error/not-found-error.component.html
@@ -8,7 +8,7 @@
     <h4 class="padding-bottom-2 text-color-secondary">
       That page does not exist
     </h4>
-    <a type="button" routerLink="/" class="btn btn-primary font-weight-bold">
+    <a type="link" routerLink="/" class="btn btn-primary font-weight-bold">
       Back to Home
     </a>
   </div>
