--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -20,13 +20,13 @@
         <h5 class="font-weight-bold text-color-primary">About Us</h5>
         <div class="d-flex flex-col">
           <div class="d-flex flex-column flex-grow-1">
-            <a routerLink="/company">What is myma?</a>
-            <a href="/company#team-anchor">Meet the team</a>
-            <a href="/company#vacancies-anchor">We're hiring</a>
+            <a type="link" routerLink="/company">What is myma?</a>
+            <a type="link" href="/company#team-anchor">Meet the team</a>
+            <a type="link" href="/company#vacancies-anchor">We're hiring</a>
           </div>
           <div class="d-flex flex-column flex-grow-1">
-            <a href="/assets/pdf/invest.pdf">Invest in myma</a>
-            <a routerLink="/contact">Get in touch</a>
+            <a type="link" href="/assets/pdf/invest.pdf">Invest in myma</a>
+            <a type="link" routerLink="/contact">Get in touch</a>
           </div>
         </div>
       </div>
@@ -36,13 +36,13 @@
         <h5 class="font-weight-bold text-color-primary">Products</h5>
         <div class="d-flex flex-col">
           <div class="d-flex flex-column flex-grow-1">
-            <a href="https://wifiplug.co.uk/">WIFIPLUG website</a>
-            <a routerLink="/serviceplug">SERVICEPLUG</a>
-            <a routerLink="/whitelabel">White labelling</a>
+            <a type="link" href="https://wifiplug.co.uk/">WIFIPLUG website</a>
+            <a type="link" routerLink="/serviceplug">SERVICEPLUG</a>
+            <a type="link" routerLink="/whitelabel">White labelling</a>
           </div>
           <div class="d-flex flex-column flex-grow-1">
-            <a routerLink="/consulting">Consulting</a>
-            <a href="https://developer.wifiplug.io/">Developer documentation</a>
+            <a type="link" routerLink="/consulting">Consulting</a>
+            <a type="link" href="https://developer.wifiplug.io/">Developer documentation</a>
           </div>
         </div>
       </div>
