--- a/src/assets/css/shared/buttons.scss
+++ b/src/assets/css/shared/buttons.scss
@@ -4,6 +4,10 @@
 
 .btn,
 .form-control {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  opacity: 1 !important;
   border-radius: 0.5rem !important;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
