--- a/src/app/components/home/home-worked-with/home-worked-with.component.html
+++ b/src/app/components/home/home-worked-with/home-worked-with.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row justify-content-center margin-top-1">
       <a
-        type="button"
+        type="link"
         routerLink="/contact"
         class="btn btn-secondary font-weight-bold meet-button"
       >
