--- a/src/app/components/products/consulting/work-with/work-with.component.html
+++ b/src/app/components/products/consulting/work-with/work-with.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="margin-top-1">
         <a
-          type="button"
+          type="link"
           routerLink="/contact"
           class="btn btn-secondary font-weight-bold meet-button"
         >
