--- a/src/app/components/products/whitelabel/whitelabel.component.html
+++ b/src/app/components/products/whitelabel/whitelabel.component.html
@@ -46,7 +46,7 @@
     </div>
     <div class="margin-top-1">
       <a
-        type="button"
+        type="link"
         routerLink="/contact"
         class="btn btn-secondary font-weight-bold meet-button"
       >
