--- a/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
+++ b/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
@@ -89,14 +89,14 @@
     height: 100%;
   }
   .toggledown {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
   }
   .dropdown .toggledown::after {
-    margin: 0;
-    position: absolute;
-    top: 65%;
+    margin: 0 !important;
+    position: absolute !important;
+    top: 65% !important;
   }
   .menudown,
   .menuright {
