Safari dropdown arrow position fix

--- a/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
+++ b/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
@@ -97,6 +97,7 @@
     margin: 0 !important;
     position: absolute !important;
     top: 65% !important;
+    left: calc(50% - 0.3rem) !important; // Fixes the arrow position on Safari
   }
   .menudown,
   .menuright {
