--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -21,11 +21,11 @@
         <div class="d-flex flex-col">
           <div class="d-flex flex-column flex-grow-1">
             <a type="link" routerLink="/company">What is myma?</a>
-            <a type="link" href="/company#team-anchor">Meet the team</a>
-            <a type="link" href="/company#vacancies-anchor">We're hiring</a>
+            <a type="link" href="./company#team-anchor">Meet the team</a>
+            <a type="link" href="./company#vacancies-anchor">We're hiring</a>
           </div>
           <div class="d-flex flex-column flex-grow-1">
-            <a type="link" href="/assets/pdf/invest.pdf">Invest in myma</a>
+            <a type="link" href="./assets/pdf/invest.pdf">Invest in myma</a>
             <a type="link" routerLink="/contact">Get in touch</a>
           </div>
         </div>
