added copyright for slogan

--- a/src/app/components/home/home-banner/home-banner.component.html
+++ b/src/app/components/home/home-banner/home-banner.component.html
@@ -6,7 +6,7 @@
     class="padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
     <h1 class="font-weight-bold m-0 text-color-light myma-title">
-      We Turn The Key For IoT
+      We Turn The Key For IoT <small><sup>&copy;</sup></small>
     </h1>
     <h4 class="padding-bottom-1 padding-top-1 text-color-light">
       myma provides both manufacturers and consumers insight into their
