--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,6 +10,6 @@
  *********************************************************************************************/
 @media (min-width: 992px) {
   #home-content {
-    padding-top: calc(100vh);
+    padding-top: calc(100vh - 80px - 0.4rem);
   }
 }
