--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -1,6 +1,4 @@
-<div
-  class="container-fluid p-0 min-height-content-full spacing-0"
->
+<div class="container-fluid p-0 min-height-content-full spacing-0">
   <div class="row m-0 min-height-content-full">
     <div class="col-sm-7 p-0 image-col">
       <img
@@ -16,12 +14,15 @@
           Hi, We're myma!
         </h1>
         <h4 class="padding-bottom-1 text-center">
-          We're on a mission to provide industry leading IoT services.
+          Build or Buy?
         </h4>
-
         <p class="text px-4">
-          Our team is highly motivated, enthusiastic and excited to provide
-          reliable and high quality products to tens of thousands of users.
+          At myma we have invested over 40,000hrs building the most robust,
+          scalable IoT infrastructure on the planet. We launched the original
+          smart plug WIFIPLUG 7 years ago and continue to outperform the
+          competition. Our simple turnkey solution means we can get your project
+          up and running in weeks not years. Our UK based team are happy to
+          discuss your next project with you.
         </p>
       </div>
       <div class="margin-top-1 meet-button">
