--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -24,9 +24,8 @@
                   The world's smartest smart plug.
                 </h5>
                 <p class="product-text">
-                  The world's smallest, smartest, smart plug. Control your home
-                  from your phone with the WIFIPLUG app and every major voice
-                  assistant.
+                  Control your home from your phone, voice or location, anywhere
+                  in the world.
                 </p>
                 <div class="text-center margin-top-2 product-button button-2">
                   <a
@@ -34,7 +33,7 @@
                     class="btn btn-secondary font-weight-bold"
                     href="https://wifiplug.co.uk/"
                   >
-                    Details
+                    Buy now
                   </a>
                 </div>
               </div>
@@ -60,10 +59,9 @@
                   Detect faults with your appliances, before they happen.
                 </h5>
                 <p class="product-text">
-                  Our machine learning can detect potential faults with your
-                  machine, before they become problems - statistics show that
-                  predictive maintenance can add an extra two years to your
-                  machine's lifespan!
+                  Detect a fault before it happens with myma’s state of the art
+                  machine learning. Predictive & Preventative maintenance can
+                  expand the lifespan of your machine by up to two years!
                 </p>
                 <div class="text-center margin-top-2 product-button button-2">
                   <a
@@ -71,7 +69,7 @@
                     class="btn btn-secondary font-weight-bold"
                     routerLink="serviceplug"
                   >
-                    Details
+                    Learn more
                   </a>
                 </div>
               </div>
@@ -88,21 +86,20 @@
             >
               <div class="margin-bottom-2">
                 <h3 class="text-color-primary">
-                  White Labelling
+                  WHITE LABELLING
                 </h3>
                 <h5 class="text-color-secondary">
-                  Our products. <br />Your business.
+                  Your business. Your brand. Our products.
                 </h5>
               </div>
               <div class="product-presentation">
                 <h5 class="product-title">
-                  Rebrand our products for your own business.
+                  We’ve done the hard work.
                 </h5>
                 <p class="product-text">
-                  We provide you the blank product, on which you can apply your
-                  own logo and other information. The smart plug can be managed
-                  with the dedicated app, which you can also personalise with
-                  your logo.
+                  myma has invested years of hard work building the platform
+                  meaning you don’t have to. You can whitelabel our services and
+                  take full advantage of the myma platform.
                 </p>
                 <div class="text-center margin-top-2 product-button button-2">
                   <a
@@ -126,9 +123,9 @@
               class="height-100 d-flex flex-column padding-top-9 padding-bottom-10 content-div last-content-div"
             >
               <div class="margin-bottom-2">
-                <h3 class="text-color-primary">Consulting</h3>
+                <h3 class="text-color-primary">CONSULTING</h3>
                 <h5 class="text-color-secondary">
-                  Brilliant solutions. <br />Profitable results.
+                  Brilliant solutions. Profitable results.
                 </h5>
               </div>
               <div class="product-presentation">
