--- a/src/app/components/home/home-worked-with/home-worked-with.component.html
+++ b/src/app/components/home/home-worked-with/home-worked-with.component.html
@@ -2,7 +2,7 @@
   <div class="container padding-top-6 padding-bottom-6">
     <div class="row justify-content-center margin-bottom-1">
       <h3 class="text-color-light font-weight-bold m-0">
-        We're Working With
+        We’ve Worked With
       </h3>
     </div>
     <div class="row justify-content-center">
@@ -15,7 +15,7 @@
     </div>
     <div class="row justify-content-center margin-top-1">
       <h4 class="m-0 text-color-light">
-        You want to work with us?
+        Want to work with us?
       </h4>
     </div>
     <div class="row justify-content-center margin-top-1">
