--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -10,8 +10,7 @@
           alt="myma logo"
         />
         <a>
-          myma gives manufacturers and consumers insight into their appliances
-          like never before.
+          We turn the key for IoT <small><sup>&copy;</sup></small>
         </a>
       </div>
       <div
@@ -42,7 +41,9 @@
           </div>
           <div class="d-flex flex-column flex-grow-1">
             <a type="link" routerLink="/consulting">Consulting</a>
-            <a type="link" href="https://developer.wifiplug.io/">Developer documentation</a>
+            <a type="link" href="https://developer.wifiplug.io/"
+              >Developer documentation</a
+            >
           </div>
         </div>
       </div>
