--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="z-index-1">
-  <nav #navbar
+  <nav
+    #navbar
     class="fixed-top navbar navbar-expand-lg navbar-light background-color-light shadow-sm"
     data-toggle="collapse"
     data-target=".navbar-collapse.show"
@@ -31,7 +32,7 @@
           <app-nav-button
             [inDropdown]="'true'"
             [link]="'https://wifiplug.co.uk/'"
-            [text]="'WifiPlug'"
+            [text]="'WIFIPLUG'"
           ></app-nav-button>
 
           <!-- Serviceplug submenu - LARGE SCREENS -->
@@ -40,7 +41,7 @@
             class="serviceplug-menu-large"
             [clickable]="'true'"
             [route]="'serviceplug'"
-            [text]="'Serviceplug'"
+            [text]="'SERVICEPLUG'"
             [direction]="'right'"
           >
             <app-nav-button
@@ -60,7 +61,7 @@
               <app-nav-button
                 [inDropdown]="'true'"
                 [route]="'serviceplug'"
-                [text]="'Serviceplug'"
+                [text]="'SERVICEPLUG'"
               ></app-nav-button>
               <div>
                 <app-nav-button
@@ -82,12 +83,12 @@
           <app-nav-button
             [inDropdown]="'true'"
             [route]="'whitelabel'"
-            [text]="'White Labelling'"
+            [text]="'WHITE LABELLING'"
           ></app-nav-button>
           <app-nav-button
             [inDropdown]="'true'"
             [route]="'consulting'"
-            [text]="'Consulting'"
+            [text]="'CONSULTING'"
           ></app-nav-button>
         </app-nav-dropdown>
         <app-nav-button
