--- a/src/app/components/company/company-banner/company-banner.component.scss
+++ b/src/app/components/company/company-banner/company-banner.component.scss
@@ -14,7 +14,8 @@
   }
 }
 .text {
-  text-align: justify;
+  //text-align: justify;
+  text-align: left;
 }
 .company-banner-right {
   justify-content: center;
