Header removed submenu+relocated links servpl page

--- a/src/app/components/products/serviceplug/learn-more/learn-more.component.html
+++ b/src/app/components/products/serviceplug/learn-more/learn-more.component.html
@@ -1,5 +1,5 @@
 <article
-  class="container-fluid px-0 background-color-primary padding-bottom-6 padding-top-6"
+  class="container-fluid px-0 background-color-primary padding-bottom-6 padding-top-6 border-top-secondary"
 >
   <div
     class="padding-left-2 padding-right-2 padding-bottom-3 d-flex flex-column align-items-center text-color-light"
