--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
@@ -8,7 +8,7 @@
     </h4>
     <button
       type="button"
-      (click)="onMoreClick('howItWorks-anchor')"
+      (click)="onMoreClick('serviceplug-anchor')"
       class="btn btn-secondary font-weight-bold"
     >
       Learn more
