--- a/src/app/components/products/serviceplug/serviceplug.component.html
+++ b/src/app/components/products/serviceplug/serviceplug.component.html
@@ -1,4 +1,5 @@
 <app-serviceplug-banner></app-serviceplug-banner>
-<app-how-it-works></app-how-it-works>
+<div id="serviceplug-anchor"></div>
 <app-learn-more></app-learn-more>
+<app-how-it-works></app-how-it-works>
 <app-footer></app-footer>
