--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -35,7 +35,13 @@
             [text]="'WIFIPLUG'"
           ></app-nav-button>
 
+          <app-nav-button
+            [inDropdown]="'true'"
+            [route]="'serviceplug'"
+            [text]="'SERVICEPLUG'"
+          ></app-nav-button>
           <!-- Serviceplug submenu - LARGE SCREENS -->
+          <!--
           <app-nav-dropdown
             [inDropdown]="'true'"
             class="serviceplug-menu-large"
@@ -55,7 +61,9 @@
               [text]="'For manufacturers'"
             ></app-nav-button>
           </app-nav-dropdown>
+          -->
           <!-- Serviceplug submenu - SMALL SCREENS -->
+          <!--
           <div class="serviceplug-menu-small">
             <div class="second-dropdown">
               <app-nav-button
@@ -79,6 +87,7 @@
               </div>
             </div>
           </div>
+          -->
 
           <app-nav-button
             [inDropdown]="'true'"
