--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
@@ -20,7 +20,7 @@
 }
 .howItWorks-container {
   border-top: 0.1rem solid var(--bg-secondary);
-  border-bottom: 0.1rem solid var(--bg-secondary);
+  //border-bottom: 0.1rem solid var(--bg-secondary);
   padding: 0;
   box-shadow: 0 -0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
