--- a/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
+++ b/src/app/components/shared/header/nav-dropdown/nav-dropdown.component.scss
@@ -51,6 +51,9 @@
     opacity: 1;
   }
 }
+.disabledDropdown::after {
+  display: none !important;
+}
 
 /*********************************************************************************************
  * Small screens styles
