--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
@@ -1,4 +1,4 @@
-<article class="howItWorks-article border-top-secondary">
+<article class="howItWorks-article">
   <div
     class="howItWorks-title padding-left-2 padding-right-2 padding-top-6 d-flex justify-content-between align-items-end"
   >
