--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -35,13 +35,7 @@
             [text]="'WIFIPLUG'"
           ></app-nav-button>
 
-          <app-nav-button
-            [inDropdown]="'true'"
-            [route]="'serviceplug'"
-            [text]="'SERVICEPLUG'"
-          ></app-nav-button>
           <!-- Serviceplug submenu - LARGE SCREENS -->
-          <!--
           <app-nav-dropdown
             [inDropdown]="'true'"
             class="serviceplug-menu-large"
@@ -49,6 +43,7 @@
             [route]="'serviceplug'"
             [text]="'SERVICEPLUG'"
             [direction]="'right'"
+            [disabledDropdown]="'false'"
           >
             <app-nav-button
               [inDropdown]="'true'"
@@ -61,9 +56,8 @@
               [text]="'For manufacturers'"
             ></app-nav-button>
           </app-nav-dropdown>
-          -->
+          
           <!-- Serviceplug submenu - SMALL SCREENS -->
-          <!--
           <div class="serviceplug-menu-small">
             <div class="second-dropdown">
               <app-nav-button
@@ -87,7 +81,6 @@
               </div>
             </div>
           </div>
-          -->
 
           <app-nav-button
             [inDropdown]="'true'"
