home products fix

--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -124,7 +124,7 @@
             >
               <div class="margin-bottom-2">
                 <h3 class="text-color-primary">CONSULTING</h3>
-                <h5 class="text-color-secondary">
+                <h5 class="text-color-secondary padding-right-7">
                   Brilliant solutions. Profitable results.
                 </h5>
               </div>
@@ -132,7 +132,7 @@
                 <h5 class="product-title">
                   Work with us to get better results.
                 </h5>
-                <p class="product-text">
+                <p class="product-text padding-right-3">
                   We have worked with a lot of companies, to provide them the
                   best solution adapted to their problems.
                 </p>
