--- a/src/app/components/home/home-products/home-products.component.scss
+++ b/src/app/components/home/home-products/home-products.component.scss
@@ -35,6 +35,7 @@ h3,
 }
 article .container-fluid .row {
   background-color: #e0e0e0;
+  //background-color: var(--bg-primary);
 }
 .with-border {
   border-left: 0.1rem solid var(--bg-light);
